--- a/plutarch.cabal
+++ b/plutarch.cabal
@@ -81,12 +81,14 @@ library
     Plutarch.Api.V1
     Plutarch.Api.V1.Address
     Plutarch.Api.V1.AssocMap
+    Plutarch.Api.V1.Bytes
     Plutarch.Api.V1.Contexts
     Plutarch.Api.V1.Crypto
     Plutarch.Api.V1.DCert
     Plutarch.Api.V1.Interval
     Plutarch.Api.V1.Maybe
     Plutarch.Api.V1.Scripts
+    Plutarch.Api.V1.Slot
     Plutarch.Api.V1.Time
     Plutarch.Api.V1.Tuple
     Plutarch.Api.V1.Tx
@@ -158,6 +160,7 @@ test-suite examples
 
   other-modules:
     Examples.Api
+    Examples.ConstrData
     Examples.Field
     Examples.LetRec
     Examples.List
