More instances, rethink divMod

--- a/plutarch-numeric/plutarch-numeric.cabal
+++ b/plutarch-numeric/plutarch-numeric.cabal
@@ -51,6 +51,7 @@ library
   import:          lang
   exposed-modules:
     Plutarch.Numeric
+    Plutarch.Numeric.Extra
     Plutarch.Numeric.Group
 
   other-modules:
