--- a/plutarch-numeric/plutarch-numeric.cabal
+++ b/plutarch-numeric/plutarch-numeric.cabal
@@ -56,6 +56,7 @@ library
   other-modules:
     Plutarch.Numeric.Additive
     Plutarch.Numeric.Combination
+    Plutarch.Numeric.Fractional
     Plutarch.Numeric.Monoidal
     Plutarch.Numeric.Multiplicative
     Plutarch.Numeric.Natural
