--- a/plutarch-extra/plutarch-extra.cabal
+++ b/plutarch-extra/plutarch-extra.cabal
@@ -88,6 +88,7 @@ library
     Plutarch.Api.V1.Extra
     Plutarch.Categories.Extra
     Plutarch.Extra
+    Plutarch.Integer.Extra
     Plutarch.ListUtils
     Plutarch.Map.Extra
     Plutarch.Maybe.Extra
